<resources>
    <string name="app_name" translatable="false">EasyInvest</string>

    <string name="lorem_ipsum">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</string>

    <!--AddProjectActivity-->
    <string name="add_project_title">New project</string>
    <string name="name">Name</string>
    <string name="select_company">Select company</string>
    <string name="description">Description</string>
    <string name="project_length">Length of the project (in years)</string>
    <string name="r_description">Discount rate R (minimal profit, in percents)</string>
    <string name="enter_init_invest">Initial investment</string>
    <string name="enter_money_flow">Money flow values for each year</string>
    <string name="year_num">Year %d</string>
    <string name="years">years</string>
    <string name="percent" translatable="false">%</string>
    <string name="units">units</string>
    <string name="minus" translatable="false">-</string>

    <string name="error_project_no_name">Set a name for project</string>
    <string name="error_project_no_description">Write a description for project</string>
    <string name="error_project_no_r">Provide a discount rate of the project</string>
    <string name="error_project_no_duration">Provide duration of the project</string>
    <string name="error_project_no_init_invest">Provide initial investments of the project</string>
    <string name="error_project_no_year_value">Provide a value for this year</string>

    <!--Edit actionbar-->
    <string name="save">Save</string>

    <!--Common errors-->
    <string name="error_positive_number">Number should be positive</string>
    <string name="error_positive_integer">Number should be positive integer</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_should_contain_positive">Money flows should contain at least 1 positive value</string>
    <string name="error_duration_too_big">Too big duration</string>

    <!--Menu-->
    <string name="project">Projects</string>
    <string name="companies">Companies</string>
    <string name="groups">Groups</string>
    <string name="money_format">%.2f units</string>
    <string name="r_format" translatable="false">%.2f%%</string>
    <string name="duration_format">%d years</string>
    <string name="group_name">Group name</string>

    <!--Add company-->
    <string name="owner_name">Owner</string>
    <string name="phone">Phone number</string>
    <string name="select_group">Select group</string>
    <string name="add_company_title">New company</string>
    <string name="error_company_no_name">Set a name for company</string>
    <string name="error_company_no_owner_name">Write an owner name</string>
    <string name="error_company_no_description">Write a description for company</string>
    <string name="error_company_no_phone">Set a correct phone for company</string>

    <!--ProjectViewActivity-->
    <string name="pp_profitable">Project will pay off after %s years</string>
    <string name="pp_unprofitable">Project doesn\'t pay off</string>
    <string name="arr_investments_return">Project returns %s%% investments per year avg</string>
    <string name="npv_profitable">Project is profitable</string>
    <string name="npv_unprofitable">Project is unprofitable</string>
    <string name="npv_pays_off">Project just pays off</string>
    <string name="irr_profitable">Project is profitable at r = %s%% </string>
    <string name="irr_unprofitable">Project is unprofitable at r = %s%%</string>
    <string name="irr_pays_off">Project just pays off at r = %s%%</string>
    <string name="pi_invest_return">Every investment unit return %s profit units</string>
    <string name="init_invest">Initial investment:</string>
    <string name="r">r:</string>
    <string name="duration">Duration:</string>
    <string name="money_flows">Money flows (per year):</string>
    <string name="analysis_results">Analysis results:</string>
</resources>
